Switched to HTTP/WS Server Implemented MessageType (for chat) Implemented Auth service Implemented UserRouter Updated Client, ClientRegistry Deprecated ClientRunnable Deprecated Packet, PacketType